<resources>

    <string name="app_name">S-Drive</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_to">WELCOME TO</string>
    <!-- login -->
    <string name="sigma_taxi">SIGMA TAXI</string>
    <string name="dedicated_to_dedication">Dedicated to Dedication</string>
    <string name="phone_number_hint"><font size="9">Enter Your 10 Digit Mobile Number</font></string>
    <string name="driver_login">Driver Login</string>
    <string name="login">LOGIN</string>
    <!-- end of Login -->
    <!-- Home -->
    <string name="payment_successful">Payment Successful</string>
    <string name="do_you_want_continuity">Do You want Continuity next Booking</string>
    <string name="pay_in_advance">Pay In Advance</string>
    <string name="continue_str">Continue</string>
    <string name="dear">Dear</string>
    <string name="last_visited">Last Visited</string>
    <string name="renewal_alert">Renewal Alert</string>
    <string name="business_limit">Business Limit</string>
    <string name="used_amount">Used Amount</string>
    <string name="balance_amount">Balance Amount</string>
    <string name="credit_limit">Credit Limit</string>
    <string name="current_day_offers">Current day Offers</string>
    <string name="str_continue">Continue</string>
    <string name="click_here">Click here</string>
    <string name="to_pay_in_advance">to Pay In Advance</string>
    <string name="int_place_holder">1000/-</string>
    <string name="place_holder">place holder</string>
    <!-- end of Home -->
    <!-- Logout -->
    <string name="next_login_details">Next Login Details</string>
    <string name="location">Location</string>
    <string name="status">Status</string>
    <string name="time">Time</string>
    <string name="bookings">Bookings</string>
    <string name="earnings">Earnings</string>
    <string name="logout">Logout</string>
    <string name="yes">Yes</string>
    <string name="driver_name">Driver Name</string>
    <string name="colon">:</string>
    <string name="driver_id">Driver ID</string>
    <string name="current_location">"Current Location"</string>
    <string name="expected_login_location">"Expected Login Location"</string>
    <string name="submit">Submit</string>
    <!-- End of Logout -->

    <string name="earn_with_sigma">Earn With Sigma</string>
    <string name="reason">Reason</string>
    <string name="your_credit_limit_crossed">Your Credit Limit Crossed</string>
    <string name="call">Call</string>
    <string name="pay">Pay</string>
    <string name="cbn">Cbn</string>
    <string name="name">Name</string>
    <string name="pick_up_location">Pick up Location</string>
    <string name="special_request">Special Request</string>
    <string name="distance">DISTANCE</string>
    <string name="pickup_time">PICKUP TIME</string>
    <string name="time_left">TIME LEFT</string>
    <string name="kms">Kms</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="mr">Mr.</string>
    <string name="miss">Miss.</string>
    <string name="mrs">Mrs.</string>
    <string name="booking_alloted">Booking Alloted</string>
    <!-- <string name="booking_alloted_msg">CBN %s is alloted to %s with Driver Acceptance</string> -->


    <!-- main menu stringsss -->
    <string name="my_trips">My Trips</string>
    <string name="my_account">My Account</string>
    <string name="my_vehicle">My Vehicle</string>
    <string name="feedback">Feedback</string>
    <string name="view_offers">View Offers</string>
    <string name="payments">Payments</string>
    <string name="driver_guide">Driver Guide</string>
    <string name="guarage_support">Guarage Support</string>
    <string name="request">Request</string>

    <!-- fragment billing payment mode stringsss -->
    <string name="billing_details">\u20B9 Billing Details</string>
    <string name="total_payable">Total Payable</string>
    <string name="select_payment_mode">Select Payment Mode</string>
    <string name="cash_pay">Cash Pay</string>
    <string name="card_swiping">Card Swiping</string>
    <string name="wallet">Wallet</string>
    <string name="travel_card">Travel Card</string>
    <string name="actual_pay">Actual Pay</string>
    <string name="other_payment_modes">Other Payment Mode</string>

    <!-- fragment process bill -->
    <string name="receiving_bill_from_server">"Receiving Bill From Server"</string>
    <!-- End of fragment process bill -->


    <!-- fragment generate bill -->
    <string name="fare_breakup">FARE BREAKUP</string>
    <string name="travelled_distace">"Travelled Distace"</string>
    <string name="first_10km">First 10km</string>
    <string name="extra_12kms">Extra 12kms(12/km)</string>
    <string name="total_trip_time">Total Trip Time</string>
    <string name="free_trip_time">Free Trip Time(10 min)</string>
    <string name="trip_time_charge">Trip Time Charge for 41 min</string>
    <!-- End of fragment generate bill -->

</resources>