<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background" >

    <LinearLayout
        android:id="@+id/rl_home_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/rl_current_day_offers_container"
        android:layout_alignRight="@+id/rl_current_day_offers_container"
        android:layout_marginLeft="@dimen/fifteen"
        android:layout_marginRight="@dimen/fifteen"
        android:layout_marginTop="@dimen/fifteen"
        android:background="@color/transperant_strip_op_90"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_homeRenewal"
            style="@style/black_button"
            android:layout_margin="@dimen/five"
            android:text="@string/renewal_alert" />

        <include layout="@layout/horizontal_line" />

        <LinearLayout style="@style/home_blocks_layout" >

            <LinearLayout style="@style/home_block_ll" >

                <TextView
                    style="@style/home_text_block_header"
                    android:text="@string/business_limit" />

                <TextView
                    android:id="@+id/tv_content_business_limit"
                    style="@style/home_text_block_content" />
            </LinearLayout>

            <include layout="@layout/vertical_line" />

            <LinearLayout style="@style/home_block_ll" >

                <TextView
                    style="@style/home_text_block_header"
                    android:text="@string/used_amount" />

                <TextView
                    android:id="@+id/tv_content_used_amount"
                    style="@style/home_text_block_content" />
            </LinearLayout>

            <include layout="@layout/vertical_line" />

            <LinearLayout style="@style/home_block_ll" >

                <TextView
                    style="@style/home_text_block_header"
                    android:text="@string/balance_amount" />

                <TextView
                    android:id="@+id/tv_content_balance_amount"
                    style="@style/home_text_block_content" />
            </LinearLayout>
        </LinearLayout>

        <include layout="@layout/horizontal_line" />

        <LinearLayout style="@style/home_blocks_layout" >

            <LinearLayout style="@style/home_block_ll" >

                <TextView
                    style="@style/home_text_block_header"
                    android:text="@string/credit_limit" />

                <TextView
                    android:id="@+id/tv_content_credit_limit"
                    style="@style/home_text_block_content" />
            </LinearLayout>

            <include layout="@layout/vertical_line" />

            <LinearLayout style="@style/home_block_ll" >

                <TextView
                    style="@style/home_text_block_header"
                    android:text="@string/used_amount" />

                <TextView
                    android:id="@+id/tv_content_used_amount_bottom"
                    style="@style/home_text_block_content" />
            </LinearLayout>

            <include layout="@layout/vertical_line" />

            <LinearLayout style="@style/home_block_ll" >

                <TextView
                    style="@style/home_text_block_header"
                    android:text="@string/balance_amount" />

                <TextView
                    android:id="@+id/tv_content_balance_amount_bottom"
                    style="@style/home_text_block_content" />
            </LinearLayout>
        </LinearLayout>

        <include layout="@layout/horizontal_line" />

        <Button
            android:id="@+id/btn_pay_in_advance"
            style="@style/black_button"
            android:layout_margin="@dimen/five"
            android:text="@string/pay_in_advance" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_current_day_offers_container"
        android:layout_width="fill_parent"
        android:layout_height="80dip"
        android:layout_below="@+id/rl_home_options"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:background="@drawable/bgftr"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp" >

        <Button
            android:id="@+id/btn_current_day_offers"
            android:layout_width="wrap_content"
            android:layout_height="50dip"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/iv_special_offer"
            android:background="@drawable/selector_orange_button"
            android:text="@string/current_day_offers"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/iv_special_offer"
            android:layout_width="70dip"
            android:layout_height="70dip"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/btn_current_day_offers"
            android:src="@drawable/special_offer" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_continue"
        style="@style/black_button"
        android:layout_width="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/rl_current_day_offers_container"
        android:layout_margin="@dimen/thirty"
        android:text="@string/continue_str" />

</RelativeLayout>