<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context=".GenerateBillFragment" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <include
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            layout="@layout/header_with_back"
            android:background="@drawable/background" />

        <LinearLayout
            android:id="@+id/top_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/footer"
                android:gravity="center" >

                <TextView
                    android:id="@+id/textView1"
                    style="@style/largeTextSytle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/billing_details"
                    android:textColor="@color/white" />

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:src="@drawable/bill_icon" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="5dp"
                android:background="@color/green_bg1"
                android:gravity="center"
                android:weightSum="2" >

                <TextView
                    android:id="@+id/totalpayable_hd"
                    style="@style/largeTextSytle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/total_payable"
                    android:textColor="@color/white" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="fill_parent"
                    android:layout_margin="2dp"
                    android:background="@color/white" />

                <TextView
                    android:id="@+id/total_payable_tv"
                    style="@style/largeTextSytle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="2500"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_content"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/top_content"
            android:layout_margin="@dimen/twenty"
            android:orientation="vertical" >

            <TextView
                style="@style/bill_header"
                android:text="@string/fare_breakup" />

            <LinearLayout style="@style/bill_item" >

                <TextView
                    style="@style/bill_item_label"
                    android:text="@string/travelled_distace" />

                <TextView
                    style="@style/bill_item_text"
                    android:text="222 Kms" />
            </LinearLayout>

            <LinearLayout
                style="@style/bill_item"
                android:background="@color/bill_item1_bg" >

                <TextView
                    style="@style/bill_item_label"
                    android:text="@string/first_10km" />

                <TextView
                    style="@style/bill_item_text"
                    android:text="199" />
            </LinearLayout>

            <LinearLayout style="@style/bill_item" >

                <TextView
                    style="@style/bill_item_label"
                    android:text="@string/extra_12kms" />

                <TextView
                    style="@style/bill_item_text"
                    android:text="144" />
            </LinearLayout>

            <LinearLayout
                style="@style/bill_item"
                android:background="@color/bill_item1_bg" >

                <TextView
                    style="@style/bill_item_label"
                    android:text="@string/total_trip_time" />

                <TextView
                    style="@style/bill_item_text"
                    android:text="51 Mins" />
            </LinearLayout>

            <LinearLayout style="@style/bill_item" >

                <TextView
                    style="@style/bill_item_label"
                    android:text="@string/free_trip_time" />

                <TextView
                    style="@style/bill_item_text"
                    android:text="0.00" />
            </LinearLayout>

            <LinearLayout
                style="@style/bill_item"
                android:background="@color/bill_item1_bg" >

                <TextView
                    style="@style/bill_item_label"
                    android:text="@string/trip_time_charge" />

                <TextView
                    style="@style/bill_item_text"
                    android:text="41" />
            </LinearLayout>

            <TextView
                style="@style/bill_header"
                android:text="BOOKING ID : CBN7999999" />

            <LinearLayout style="@style/bill_item" >

                <TextView
                    style="@style/booking_item_label"
                    android:text="Journey Type" />

                <TextView
                    style="@style/booking_item_text"
                    android:text="Hyderabad, Taxi, Economy" />
            </LinearLayout>

            <LinearLayout
                style="@style/bill_item"
                android:background="@color/bill_item1_bg" >

                <TextView
                    style="@style/booking_item_label"
                    android:text="Booking Date" />

                <TextView
                    style="@style/booking_item_text"
                    android:text="31 Jul, 2015, 06:09 pm" />
            </LinearLayout>

            <LinearLayout style="@style/bill_item" >

                <TextView
                    style="@style/booking_item_label"
                    android:text="Pickup Date" />

                <TextView
                    style="@style/booking_item_text"
                    android:text="31 Jul, 2015, 06:19 pm" />
            </LinearLayout>

            <LinearLayout
                style="@style/bill_item"
                android:background="@color/bill_item1_bg" >

                <TextView
                    style="@style/booking_item_label"
                    android:text="Booking Email id" />

                <TextView
                    style="@style/booking_item_text"
                    android:text="sagar@gmail.com" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/main_content"
            android:background="@color/footer"
            android:gravity="center" >

            <Button
                android:id="@+id/submit_btn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:background="@drawable/bill_pay_btn_round_corners"
                android:text="CLICK Here to Pay"
                android:textColor="@color/footer" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>